WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182796
EventDispatcher::wheelEvent uses a wrong enum values in switch
https://bugs.webkit.org/show_bug.cgi?id=182796
Summary
EventDispatcher::wheelEvent uses a wrong enum values in switch
Ryosuke Niwa
Reported
2018-02-14 10:38:14 PST
EventDispatcher::wheelEvent is using PlatformWheelEventPhaseBegan and PlatformWheelEventPhaseEnded but the enum type of wheelEvent.phase() is WebWheelEvent::Phase.
Attachments
Fixes the bug
(1.56 KB, patch)
2018-02-14 10:40 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.56 KB, patch)
2018-02-14 10:45 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-02-14 10:40:33 PST
Created
attachment 333815
[details]
Fixes the bug
EWS Watchlist
Comment 2
2018-02-14 10:41:59 PST
Attachment 333815
[details]
did not pass style-queue: ERROR: Source/WebKit/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 3
2018-02-14 10:45:26 PST
Created
attachment 333816
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2018-02-14 11:07:38 PST
Comment on
attachment 333816
[details]
Patch for landing Clearing flags on attachment: 333816 Committed
r228473
: <
https://trac.webkit.org/changeset/228473
>
WebKit Commit Bot
Comment 5
2018-02-14 11:07:40 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-02-14 11:08:29 PST
<
rdar://problem/37541231
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug