EventDispatcher::wheelEvent uses a wrong enum values in switch https://bugs.webkit.org/show_bug.cgi?id=182796

Reviewed by Chris Dumez.

EventDispatcher::wheelEvent is using PlatformWheelEventPhaseBegan and PlatformWheelEventPhaseEnded
but the enum type of wheelEvent.phase() is WebWheelEvent::Phase.

The enum values are indentical for both so there is no behavioral change.

* WebProcess/WebPage/EventDispatcher.cpp:
(WebKit::EventDispatcher::wheelEvent):


Canonical link: https://commits.webkit.org/198554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228473 268f45cc-cd09-0410-ab3c-d52691b4dbfc